--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<product-list></product-list>
+<div class="nav-bar">
+ I am Header
+</div>
+<div class="body-container">
+    <router-outlet></router-outlet>
+</div>
+<footer>
+
+</footer>
