--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="nav-bar">
- I am Header
+    <ul>
+        <li class="active">Home</li>
+        <li>About Us</li>
+        <li>FAQ</li>
+    </ul>
 </div>
 <div class="body-container">
     <router-outlet></router-outlet>
