--- a/src/app/pages/videos/video-list.component.less
+++ b/src/app/pages/videos/video-list.component.less
@@ -1,5 +1,6 @@
 table{
     border: 1px solid #ccc;
+    width: 100%;
     thead{
         font-weight: bold;
         tr{
@@ -8,7 +9,7 @@ table{
     }
     tr{
         td{
-            padding: 20px;
+            padding: 15px 20px;
             border-right: 1px solid #ccc;
         }
     }
