--- a/src/app/pages/videos/video-list.component.html
+++ b/src/app/pages/videos/video-list.component.html
@@ -1,3 +1,4 @@
+<h1>VManager Demo v0.0.1</h1>
 <div class="search-bar">
     <span>Search Videos:</span>
     <input type="text" [(ngModel)]="searchQuery" (keyup)="onSearch(cloneVideos, searchQuery)" />
