--- a/src/app/stylesheet/movingimage.less
+++ b/src/app/stylesheet/movingimage.less
@@ -22,7 +22,7 @@ html{
 .body-container{
     padding: 20px 40px;
     .search-bar{
-        margin-bottom: 15px;
+        margin: 20px 0px 15px 0px;
     }
     input{
         margin-left: 15px;
@@ -32,6 +32,9 @@ html{
             tr{
                 &:nth-child(even) {
                     background: #dddddd;
+                }
+                button{
+                    margin: 0px 5px;
                 }
             }
         }
