--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
         <li>About Us</li>
         <li>FAQ</li>
     </ul>
+    <button class="add-btn">Add video</button>
 </div>
 <div class="body-container">
     <router-outlet></router-outlet>
