--- a/src/app/stylesheet/movingimage.less
+++ b/src/app/stylesheet/movingimage.less
@@ -7,6 +7,7 @@ html{
     background: #000;
     padding: 15px 20px;
     font-family: sans-serif;
+    position: relative;
     ul{
         li{
             display: inline-block;
@@ -16,6 +17,11 @@ html{
                 color: #fff;
             }
         }
+    }
+    .add-btn{
+        position: absolute;
+        right: 15px;
+        top: 15px;
     }
 }
 
